--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.0.2",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
     "mongoose-unique-validator": "^3.0.0",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
